# pim-ge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codegraph/: daemon.pid
docs/: index.html  pim_ge.html  search.js
examples/: README.md  _viz.py  export_plume_npz.py  fixed_source.py  gaussian_3d.py  gaussian_3d_unstable_wind.py  gaussian_plume_3d_visualization.py  gaussian_plume_visualization.py  jet_momentum.py  plume_ui.py  rotating_source.py
reproduction/: section4_simulation_study.py  section5_chilbolton.py  utils.py
src/pim_ge/: __init__.py
src/pim_ge/forward/: __init__.py  momentum.py  plume.py  sensors.py  wind.py
src/pim_ge/inverse/: __init__.py  gibbs.py  mcmc.py  priors.py
src/pim_ge/utils/: __init__.py  types.py
tests/: test_gibbs.py  test_mcmc.py  test_momentum.py  test_plume.py  test_priors.py  test_sensors.py  test_types.py  test_wind.py
